force-app/main/default/objects/Gift__c/Gift__c.object-meta.xml
<CustomObject>
    <description>A gift can be created into the application and linked to the program.</description>
    <label>Gift</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Gift Ref.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>