force-app/main/default/objects/Gift__c/fields/Gift_Detail__c.field-meta.xml
<CustomField>
    <fullName>Gift_Detail__c</fullName>
    <label>Gift Detail</label>
    <length>40</length>
    <type>Text</type>
</CustomField>