force-app/main/default/objects/Gift__c/fields/Gift_Name__c.field-meta.xml
<CustomField>
    <fullName>Gift_Name__c</fullName>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Champagne</fullName>
            </value>
            <value>
                <fullName>Chocolates</fullName>
            </value>
            <value>
                <fullName>Flowers</fullName>
            </value>
            <value>
                <fullName>LV Gift</fullName>
            </value>
            <value>
                <fullName>Non LV Gift</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Néo Nano Fuschia</fullName>
            </value>
            <value>
                <fullName>Pochette Jour Taiga Grizzli</fullName>
            </value>
            <value>
                <fullName>Dom Pérignon P2</fullName>
            </value>
            <value>
                <fullName>Leather Envelope</fullName>
            </value>
            <value>
                <fullName>Guerlain Sunscreen</fullName>
            </value>
            <value>
                <fullName>Guerlain Cosmetics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>