force-app/main/default/objects/Gift__c/fields/ProgramId__c.field-meta.xml
<CustomField>
    <fullName>ProgramId__c</fullName>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Gifts</relationshipLabel>
    <relationshipName>Gifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>