force-app/main/default/objects/Gift__c/fields/RecoveryAct__c.field-meta.xml
<CustomField>
    <fullName>RecoveryAct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recovery Act</label>
    <type>Checkbox</type>
</CustomField>