force-app/main/default/objects/Gift__c/fields/Welcome_Package__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Package</label>
    <type>Checkbox</type>
</CustomField>