force-app/main/default/objects/Gift__c/recordTypes/Business_Gift.recordType-meta.xml
<RecordType>
    <fullName>Business_Gift</fullName>
    <active>true</active>
    <label>Business Gift</label>
</RecordType>