force-app/main/default/objects/Gift__c/validationRules/VR_GiftType.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_GiftType</fullName>
    <active>true</active>
    <description>Gift Type is requeried</description>
    <errorConditionFormula>ISBLANK(TEXT(Gift_Name__c))</errorConditionFormula>
    <errorDisplayField>Gift_Name__c</errorDisplayField>
    <errorMessage>&quot;Gift Type&quot; is required.</errorMessage>
</ValidationRule>